--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "browserslist": "^4.21.4",
     "dotenv": "^16.4.5",
     "downloadjs": "^1.4.7",
+    "express": "^4.21.0",
     "firebase": "^9.9.3",
     "google-map-react": "^2.1.10",
     "google-maps-react": "^2.0.6",
@@ -55,10 +56,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
