Update deployment configuration

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 GENERATE_SOURCEMAP=false
 REACT_APP_IS_DEMO=false
-NEXT_PUBLIC_API_URL= https://backendaztrproject-702819bff886.herokuapp.com/
-REACT_APP_BACKEND_URL=https://backendaztrproject-702819bff886.herokuapp.
+NEXT_PUBLIC_API_URL=https://backendaztrproject-702819bff886.herokuapp.com/
+REACT_APP_BASE_URL=https://backendaztrproject-702819bff886.herokuapp.com
+# REACT_APP_BACKEND_URL=https://backendaztrproject-702819bff886.herokuapp.com
+
+
 
 
