--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 GENERATE_SOURCEMAP=false
 REACT_APP_IS_DEMO=false
-NEXT_PUBLIC_API_URL=https://backendaztrproject-702819bff886.herokuapp.com/
-REACT_APP_BASE_URL=https://backendaztrproject-702819bff886.herokuapp.com
+NEXT_PUBLIC_API_URL=https://backendaztrproject-8194d959ff16.herokuapp.com/api
+REACT_APP_BASE_URL=https://backendaztrproject-8194d959ff16.herokuapp.com
 # REACT_APP_BACKEND_URL=https://backendaztrproject-702819bff886.herokuapp.com
 
 
