--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 GENERATE_SOURCEMAP=false
 REACT_APP_IS_DEMO=false
-REACT_APP_BASE_URL=https://backendapp-9be8ceb2b56e.herokuapp.com/
-REACT_APP_BASE_URL=https://backendapp-9be8ceb2b56e.herokuapp.com/api
+REACT_APP_BASE_URL=https://backendapp-9be8ceb2b56e.herokuapp.com
+REACT_APP_API_URL=https://backendapp-9be8ceb2b56e.herokuapp.com/api
 
